Ajout du fichierr index.html

--- a/premierprojets/index.html
+++ b/premierprojets/index.html
@@ -12,7 +12,7 @@
     <title>Créez votre premier blog en PHP</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
     <link href="freelancer.min.css" rel="stylesheet">
