--- a/premierprojets/index.html
+++ b/premierprojets/index.html
@@ -18,7 +18,7 @@
     <link href="freelancer.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
@@ -54,9 +54,9 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">a propos de moi</a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll"></li>
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -173,8 +173,8 @@
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                    <a href="https://cvdesignr.com/p/5b04bd05bb23b" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Télécharger mon cv 
                     </a>
                 </div>
             </div>
