Ajout du fichier index.html

--- a/premierprojets/index.html
+++ b/premierprojets/index.html
@@ -54,7 +54,7 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">a propos de moi</a>
+                        <a href="#about">A mon sujet</a>
                     </li>
                     <li class="page-scroll"></li>
                         <a href="#contact">Contact</a>
@@ -99,7 +99,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img href="https://www.facebook.com/photo/?fbid=451296876150193&set=pob.100038096522053" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
