Ajout du fichier index.html

--- a/premierprojets/index.html
+++ b/premierprojets/index.html
@@ -171,7 +171,8 @@
                     <p>Ça y est, vous avez sauté le pas ! Le monde du développement web avec PHP est à portée de main et vous avez besoin de visibilité pour pouvoir convaincre vos futurs employeurs/clients en un seul regard. Vous êtes développeur PHP, il est donc temps de montrer vos talents au travers d’un blog à vos couleurs.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>Déjà validé plusieurs projets. Bravo !
+                        C’est le moment opportun pour perfectionner les compétences acquises lors des projets précédents en parrainant des étudiants moins avancés.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://cvdesignr.com/p/5b04bd05bb23b" class="btn btn-lg btn-outline">
