--- a/premierprojets/index.html
+++ b/premierprojets/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="https://www.facebook.com/photo/?fbid=451296876150193&set=pob.100038096522053" alt="">
+                    <img class="img-responsive" src="https://www.facebook.com/photo.php?fbid=499874604625753&set=pb.100038096522053.-2207520000..&type=3" alt="">
                     <div class="intro-text">
                         <span class="name">Aly Diabira </span>
                         <hr class="star-light">
@@ -100,7 +100,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://www.facebook.com/photo/?fbid=451296876150193&set=pob.100038096522053" class="img-responsive" alt="">
+                        <img src="https://www.facebook.com/photo.php?fbid=499874604625753&set=pb.100038096522053.-2207520000..&type=3" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -110,7 +110,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://www.facebook.com/photo/?fbid=451296876150193&set=pob.100038096522053" class="img-responsive" alt="">
+                        <img src="https://www.facebook.com/photo.php?fbid=499874604625753&set=pb.100038096522053.-2207520000..&type=3" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -120,7 +120,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://www.facebook.com/photo/?fbid=451296876150193&set=pob.100038096522053" class="img-responsive" alt="">
+                        <img src="https://www.facebook.com/photo.php?fbid=499874604625753&set=pb.100038096522053.-2207520000..&type=3" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -130,7 +130,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://www.facebook.com/photo/?fbid=451296876150193&set=pob.100038096522053" class="img-responsive" alt="">
+                        <img src="https://www.facebook.com/photo.php?fbid=499874604625753&set=pb.100038096522053.-2207520000..&type=3" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -140,7 +140,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://www.facebook.com/photo/?fbid=451296876150193&set=pob.100038096522053" class="img-responsive" alt="">
+                        <img src="https://www.facebook.com/photo.php?fbid=499874604625753&set=pb.100038096522053.-2207520000..&type=3" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -150,7 +150,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://www.facebook.com/photo/?fbid=451296876150193&set=pob.100038096522053" class="img-responsive" alt="">
+                        <img src="https://www.facebook.com/photo.php?fbid=499874604625753&set=pb.100038096522053.-2207520000..&type=3" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
@@ -199,7 +199,7 @@
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
+                                <label>Nom</label>
                                 <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -279,7 +279,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; Your Website 2021
                     </div>
                 </div>
             </div>
@@ -308,7 +308,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="https://www.facebook.com/photo/?fbid=451296876150193&set=pob.100038096522053" class="img-responsive img-centered" alt="">
+                            <img src="https://www.facebook.com/photo.php?fbid=499874604625753&set=pb.100038096522053.-2207520000..&type=3" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
