--- a/premierprojets/index.html
+++ b/premierprojets/index.html
@@ -100,7 +100,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://www.facebook.com/photo.php?fbid=499874604625753&set=pb.100038096522053.-2207520000..&type=3" class="img-responsive" alt="">
+                        <img src="SCAN0029.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
